@@ -42,8 +42,6 @@ from mrjob.conf import expand_path
 from mrjob.conf import find_mrjob_conf
 from mrjob.conf import load_mrjob_conf
 from mrjob.conf import load_opts_from_mrjob_conf
-from mrjob.inline import InlineMRJobRunner
-from mrjob.inline import InlineRunnerOptionStore
 from tests.quiet import log_to_buffer
 from tests.quiet import logger_disabled
 from tests.quiet import no_handlers_for_logger
@@ -544,14 +542,3 @@ class CombineAndExpandPathsTestCase(unittest.TestCase):
             [bar_path, foo_path, foo_path,
              os.path.join(self.tmp_dir, 'q*'),
              's3://walrus/foo'])
-
-
-class OptionStoreTestCase(unittest.TestCase):
-
-    def test_getattr_forward(self):
-        with no_handlers_for_logger():
-            r = InlineMRJobRunner(conf_path=False)
-        store = r._opts
-        self.assertIsInstance(store, InlineRunnerOptionStore)
-        a = r.get_default_opts()
-        self.assertEqual(a, store.default_options())
